<resources>
    <string name="app_name">Energy cost - Photovoltaics</string>

    <string name="nav_header_title" translatable="false">@string/app_name</string>
    <string name="nav_header_desc" translatable="false">Text obrazka</string>

    <string name="action_settings">Settings</string>
    <string name="room_settings_change_room_name">Room settings</string>

    <string name="studio_email" translatable="false"> devsdreamstudio@gmail.com</string>
    <string name="menu_sun_energy_calculator">Profitability calculator</string>
    <string name="menu_sun_energy_title">Photovoltaics</string>
    <string name="menu_information">Information</string>
    <string name="nav_about_us">About us</string>

    <string name="mail">Dev e-mail copied!</string>

    <string name="home_hint_number_device">Device Number</string>

    <string name="home_table_user_time">User time</string>
    <string name="home_table_day" translatable="false">24h</string>
    <string name="home_button_calc_it">Calc it</string>
    <string name="home_energy_cost_hint" translatable="false">@string/settings_energy_cost_global</string>

    <string name="room_list_summary_of_the_costs">Summary of rooms costs</string>
    <string name="room_list_table_month" translatable="false">@string/home_table_month</string>
    <string name="room_list_table_day" translatable="false">24h</string>
    <string name="room_list_table_year">365 days</string>
    <string name="room_edit_summary_of_the_costs_room">Summary of room cost</string>

    <string name="menu_home">Energy Cost Calculator</string>
    <string name="menu_room_list">House manager</string>

    <string name="device_row_device_number">"Device numbers : "</string>
    <string name="device_row_device_time_work">"Working time : "</string>
    <string name="device_row_device_power">"Power Value : "</string>

    <string name="home_hint_power_value">Device Power Value (W)</string>
    <string name="home_hint_timework_m">Working Time : Minutes</string>
    <string name="home_hint_timework_h">Working Time : Hours</string>
    <string name="home_table_month">30 days</string>

    <string name="settings_currency_global">Currency</string>
    <string name="settings_energy_cost_global">kWh cost</string>
    <string name="settings_computational_accuracy_global">Calculation \n accuracy</string>
    <string name="settings_add_default_device">Add device </string>
    <string name="settings_default_devices_list">Default devices list </string>
    <string name="settings_label_title">Settings</string>

    <string name="chart_daily_costs">Daily costs</string>
    <string name="chart_kwh_consumption">kWh consumption</string>

    <string name="error_name_canot_start_from_number">The name cannot start with a number</string>
    <string name="error_name_canot_start_from_white_space">The name cannot start with a whitespace</string>
    <string name="error_no_data">" Lack of data!"</string>

    <string name="dialog_hint_new_room_name">Enter new room name</string>
    <string name="dialog_edit_device_name">Device name</string>
    <string name="dialog_edit_device_button_time_work">Working Time</string>
    <string name="dialog_room_edit_room_name">Room name</string>
    <string name="dialog_edit_device_power_value" translatable="false">@string/home_hint_power_value</string>
    <string name="dialog_edit_device_number" translatable="false">@string/home_hint_number_device</string>

    <string name="toast_room_added">Room added</string>
    <string name="toast_new_room_name">New room name : </string>
    <string name="toast_device_wokrs_all_day">Device works all day</string>
    <string name="toast_device_added">Device added</string>
    <string name="toast_device_updated">Device updated</string>

    <string name="just_templates">Templates</string>
    <string name="just_room">Room</string>
    <string name="just_room_name">Room name</string>

    <string name="sql_exception_DuplicationRoom">- This room already exists</string>
    <string name="sql_exception_DuplicationDevice">- This device already exists</string>
    <string name="sql_exception_WrongTime">Choose work time</string>
    <string name="sql_exception_EmptyField">"Empty field "</string>

    <string name="default_device_phone_charger_idle">Phone charger - Standby</string>
    <string name="default_device_phone_charger">Phone charger</string>
    <string name="default_device_fridge">Fridge</string>
    <string name="default_device_led_light">Led Light</string>
    <string name="default_device_energy_saving_light">energy saving light</string>
    <string name="default_device_pc" translatable="false">PC</string>
    <string name="default_device_laptop" translatable="false">Laptop</string>
    <string name="default_device_tv_qled" translatable="false">TV QLED 60\"</string>
    <string name="default_device_microvave">Microwave</string>
    <string name="default_device_game_console">Game console</string>
    <string name="default_device_game_console_idle">Game console - Standby</string>
    <string name="default_device_router" translatable="false">Router</string>
    <string name="default_device_vacuum_cleaner">Vacuum cleaner</string>
    <string name="default_device_amp">Amp</string>
    <string name="default_device_amp_idle">Amp - Standby</string>
    <string name="default_device_night_light_led">LED night light</string>


    <string name="default_device_washing_wachine">Washing Machine</string>
    <string name="default_device_laudry_dryer">Laundry dryer</string>
    <string name="default_device_hair_dryer">Hair dryer</string>
    <string name="default_device_electric_heater">Electric heater</string>
    <string name="default_device_small_tv">Small TV</string>
    <string name="default_device_radio" translatable="false">Radio</string>
    <string name="default_device_induction_cooker">Induction cooker</string>
    <string name="default_device_oven">Oven</string>
    <string name="default_device_Mixer">Mixer</string>
    <string name="default_device_toaster">Toaster</string>
    <string name="default_device_kettle">Electric Kettle</string>
    <string name="default_device_dishwasher">Dishwasher</string>
    <string name="default_device_air_conditioner">Air conditioner</string>


    <string name="currency_type">$</string>
    <string name="module_power">Module power (W)</string>
    <string name="module_price">1x module price</string>
    <string name="number_of_modules">Number of modules</string>
    <string name="kWh_consumption">Monthly kWh consumption</string>
    <string name="target_instalation_power">Target installation power (kWh)</string>


    <string name="Month_billing">Month billing per energy</string>

    <string name="instalation_title">Instalation cost</string>
    <string name="installation_performance">Installation \nperformance</string>
    <string name="year">Year : </string>
    <string name="investition_toast">"Investment balance : "</string>
    <string name="investition_return">Return on investment</string>
    <string name="download_data_from_house">Download data from house</string>

    <string name="calculate">Calculated</string>

    <string name="about_us_note">We\'re a young team fascinated by programming and trying to learn! We hope that you will like our app and that it will help your calculations. Thank you for your download, and we\'re waiting for your reviews! Best regards</string>
    <string name="devs" translatable="false">~DevsDreams team</string>


    <string name="tutorial_welcome_in_room_start">You are in</string>
    <string name="tutorial_welcome_in_room_end">From there, you can manage it freely by : \n-adding  \n-editing(click on it!) \n-removing(slide to left!) \ndevices contained in it.</string>

    <string name="tutorial_new_device_title">To add a new device, click here!</string>
    <string name="tutorial_new_device_desc">You can also choose from the list of default devices. You can manage the default list of devices from the application settings</string>

    <string name="tutorial_settings_start">"Here is the list of default devices. As with home / room management, you can freely edit the default devices by clicking on them. To remove them, slide left. On begin, we have implemented "</string>
    <string name="tutorial_settings_end">default devices.</string>
    <string name="tutorial_device_list">"To edit a device / room, click on it. If you want to delete an item, slide it to the left "</string>

    <string name="tutorial_room_list_title">"Welcome to the house manager! "</string>
    <string name="tutorial_room_list_desc">To add a new room, click here!\nYou can also select prepared room schema</string>
    <string name="banner_calculator" translatable="false">ca-app-pub-8486454550638664/8407231843</string>
    <string name="banner_room_list" translatable="false">ca-app-pub-8486454550638664/5510439914</string>
    <string name="banner_sun_energy" translatable="false">ca-app-pub-8486454550638664/2259915454</string>
    <string name="banner_room_edit" translatable="false">ca-app-pub-8486454550638664/7512242131</string>
    <string name="billing_canceled">User canceled transaction</string>
    <string name="billing_item_already_owned">User already bought this item</string>
    <string name="billing_verification_of_transaction">Verification of transaction</string>
    <string name="billing_transaction_ok">"Transaction accepted "</string>
    <string name="billing_no_connect">No conncection with Google Pay / Play service</string>

    <string name="default_roomname_kitchen">Kitchen</string>
    <string name="default_roomname_bedroom">Bedroom</string>
    <string name="default_roomname_bathroom">Bathroom</string>
    <string name="default_roomname_livingroom">Living room</string>
    <string name="default_roomname_homeoffice">Home office</string>
    <string name="default_roomname_utilityroom">Utility room</string>
    <string name="tutorial_blocked_templates">After completing the guide, room examples will be unlocked!</string>
    <string name="home_button_clean_it">Clean it</string>


</resources>
