<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rooms"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_room_list" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/menu_home" />
    </group>
        <item android:title="@string/menu_sun_energy_title">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_fragment_sun_energy_calculator_layout"
                        android:icon="@drawable/ic_wb_sunny_black_24dp"
                        android:title="@string/menu_sun_energy_calculator" />
                </group>
            </menu>
        </item>
    <item android:title="@string/menu_information">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_about_us"
                    android:icon="@drawable/ic_baseline_info_24"
                    android:title="@string/nav_about_us" />
            </group>
        </menu>
    </item>

</menu>
