<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_rooms">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.devdreams.energii.koszt.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>


    <fragment
        android:id="@+id/nav_rooms"
        android:name="com.devdreams.energii.koszt.ui.rooms.RoomListFragment"
        android:label="@string/menu_room_list"
        tools:layout="@layout/fragment_rooms"/>

    <fragment
        android:id="@+id/nav_fragment_sun_energy_calculator_layout"
        android:name="com.devdreams.energii.koszt.ui.sunEnergyCalculator.SunEnergyCalculatorFragment"
        android:label="@string/menu_sun_energy_calculator"
        tools:layout="@layout/fragment_sun_energy_calculator_layout"/>
    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.devdreams.energii.koszt.AboutUs"
        android:label="@string/nav_about_us"
        tools:layout="@layout/fragment_about_us" />





</navigation>