<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="horizontal"
    tools:context=".ui.rooms.RoomListFragment">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"

            android:background="@drawable/nav_bar_gradient">

            <TextView
                android:id="@+id/rowTextViewDeviceName"
                android:layout_width="126dp"

                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/lato_black"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:autoSizeTextType="uniform"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.444" />

            <TableLayout
                android:id="@+id/sunnyTable"
                android:layout_width="191dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="70dp"
                android:layout_marginBottom="13dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">


                <TableRow>

                    <TextView
                        android:id="@+id/rowTextViewPowerTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"

                        android:fontFamily="@font/lato_light"
                        android:gravity="right"
                        android:text="@string/device_row_device_power"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/rowTextViewPower"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"

                        android:fontFamily="@font/lato_light"
                        android:text="TextView"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />


                </TableRow>


                <TableRow>

                    <TextView
                        android:id="@+id/rowTextViewNumberTitle"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_light"

                        android:gravity="right"
                        android:text="@string/device_row_device_time_work"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.8" />

                    <TextView
                        android:id="@+id/rowTextViewNumber"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_light"

                        android:text="TextView"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.8" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/rowTextViewTimeWorkTitle"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_light"
                        android:gravity="right"
                        android:text="@string/device_row_device_number"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.8" />

                    <TextView
                        android:id="@+id/rowTextViewTimeWork"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_light"

                        android:text="TextView"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.8" />

                </TableRow>
            </TableLayout>

            <ImageView
                android:id="@+id/imageView3bin"
                android:layout_width="36dp"
                android:layout_height="29dp"

                android:layout_marginTop="20dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/bin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/red" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>